--- a/app.json
+++ b/app.json
@@ -33,7 +33,9 @@
           "resizeMode": "contain",
           "backgroundColor": "#0f304d"
         }
-      ]
+      ],
+      "expo-font",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
