--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
-  ]
+    "nativewind-env.d.ts",
+    "app/(tabs)/(category)/gifs.jsx"  ]
 }
