--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts",
-    "app/(tabs)/(category)/gifs.jsx"  ]
+    "app/(tabs)/(category)/gifs.jsx", "components/ui/PagerViewNavigationPanel/NavigationPanel.jsx"  ]
 }
