--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,13 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
+        release {
+            storeFile file('my-release-key.keystore')
+            storePassword 'ankit@123'
+            keyAlias 'my-key-alias'
+            keyPassword 'ankit@123'
+        }
     }
     buildTypes {
         debug {
@@ -110,7 +117,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             shrinkResources (findProperty('android.enableShrinkResourcesInReleaseBuilds')?.toBoolean() ?: false)
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
