--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "start": "expo start --clear",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo run:android",
+    "android": "expo run:android --variant debug",
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint",
-    "build-apk": "eas build -p android --profile preview"
+    "eas-build-apk": "eas build -p android --profile preview",
+    "release-build": "expo run:android --variant release",
+    "android-release-apk": "cd android && ./gradlew assembleRelease && cd ..",
+    "android-release-aab": "cd android && ./gradlew bundleRelease && cd .."
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,14 +24,14 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "autoprefixer": "^10.4.20",
-    "expo": "^53.0.10",
+    "expo": "^53.0.9",
     "expo-blur": "~14.1.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.7",
+    "expo-image": "~2.4.0",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "^7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "~5.1.4",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
@@ -39,14 +42,16 @@
     "postcss": "^8.4.49",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-pager-view": "6.7.1",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.0",
+    "react-native-screens": "~4.11.1",
     "tailwindcss": "^3.4.17",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
