--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "esModuleInterop": true,
     "paths": {
       "@/*": [
         "./*"
@@ -15,5 +14,5 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts",
-    "app/(tabs)/(category)/gifs.jsx", "components/ui/PagerViewNavigationPanel/NavigationPanel.jsx"  ]
+    "app/(tabs)/(category)/gifs.jsx", "components/ui/PagerViewNavigationPanel/NavigationPanel.jsx", "components/Login/index.jsx"  ]
 }
